--- a/OOPProjects/PooP2/index.html
+++ b/OOPProjects/PooP2/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Trivia Game</title>
     <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
+    
+    <header>Click<button id="start">Start</button> </header>
+    <br>
     <section>
         <div id="quiz">
             <h1>Quiz</h1>
